correção de erros

--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
                                 <p class="info-text">Tecnologias usadas no projeto: HTML e CSS</p>
                             </div>
                             <button class="button-visualizar">
-                                <a href="https://erickdevp.github.io/Vingadores/" target="_blank">Vissualizar</a>
+                                <a href="https://erickdevp.github.io/Vingadores/" target="_blank">Visualizar</a>
                             </button>
                         </div>
                         <div class="card card2">
@@ -230,7 +230,7 @@
                                 <p class="info-text">Tecnologias usadas no projeto:</p>
                             </div>
                             <button class="button-visualizar">
-                                <a href="#" target="_blank">Visualizar</a>
+                                <a href="" target="_blank">Visualizar</a>
                             </button>
                         </div>
                         <div class="card card3">
@@ -245,7 +245,7 @@
                                 <p class="info-text">Tecnologias usadas no projeto:</p>
                             </div>
                             <button class="button-visualizar">
-                                <a href="#" target="_blank">Visualizar</a>
+                                <a href="" target="_blank">Visualizar</a>
                             </button>
                         </div>
                         <div class="card card4">
@@ -260,7 +260,7 @@
                                 <p class="info-text">Tecnologias usadas no projeto:</p>
                             </div>
                             <button class="button-visualizar">
-                                <a href="#" target="_blank">Visualizar</a>
+                                <a href="" target="_blank">Visualizar</a>
                             </button>
                         </div>
                     </div>
